--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "eval",
   "main": "./lib/eval",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "private": true,
   "description": "Safely evaluate JavaScript code.",
-
   "keywords": [
     "eval",
     "javascript",
@@ -24,14 +23,13 @@
     "email": "szymon.pilkowski@gmail.com",
     "url": "http://twitter.com/ard"
   },
-
-
-  "activationEvents": ["eval:run"],
+  "activationEvents": [
+    "eval:run"
+  ],
   "repository": "https://github.com/ardcore/atom-safe-eval",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
